dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/assignment/argument.alg
algoritmo "erro argumento procedimento"

procedimento proc(teste: inteiro)
inicio
fimprocedimento

inicio

    proc("a")

fimalgoritmo
